--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@mui/material": "^7.3.2",
     "@tailwindcss/vite": "^4.1.13",
     "lucide-react": "^0.544.0",
+    "rc-slider": "^11.1.9",
     "react": "^19.1.1",
     "react-cookie": "^8.0.1",
     "react-dom": "^19.1.1",
